# DCC192_TP_Final

./: .gitignore  CMakeLists.txt  README.md
Assets/Images/mapDrafts/: ruffQuest.tiled-session
Assets/Images/mapDrafts/maps/: e01m01.tmj  e01m01.tmx  e01m03.tmx  e01m04.tmj  e01m04.tmx  e01m05.tmj  e01m05.tmx
Assets/Images/mapDrafts/tileset/: Big_Oak_Tree_edit.tsx  Cave_Entrance.tsx  Cave_Floor_Decoration-Sheet_edit.tsx  Dungeon_1_Arch_Open.tsx  Dungeon_2_Door_anim.tsx  Fences.json  Fences.tsx  Metal_Grills.tsx  Objects.tsx  Ores.tsx  Player.tsx  Scarecrows.tsx  Skeleton.tsx  Spike_Gate_anim.tsx  Stone_Cliff_2_Tile.tsx  Tileset.tsx  UI.tsx  animals.tsx  cave.tsx  chars.tsx  dog_idle.tsx  dungeon.tsx  dungeon_objects.tsx  dungeon_objects2.tsx  dungeon_objects3.tsx.tsx  golem.tsx  golem_laser.tsx  grass.tsx  outdoor_deco.tsx  special_effects.tsx  tree_edit.tsx  trees.tsx  water.tsx
Assets/Sprites/Dog/: dog.json
Assets/Sprites/Player/: player.json
Assets/Sprites/Projectile/: projectile.json
Assets/Sprites/Skeleton/: skeleton.json
Assets/Sprites/SpikeGate/: texture.json
Source/: AStar.cpp  AStar.h  AudioSystem.cpp  AudioSystem.h  CSV.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Json.h  Main.cpp  MapHelper.cpp  MapHelper.h  Math.cpp  Math.h  Random.cpp  Random.h  SpatialHashing.cpp  SpatialHashing.h
Source/Actors/: Actor.cpp  Actor.h  Attack.cpp  Attack.h  Boss.cpp  Boss.h  ColliderBlock.cpp  ColliderBlock.h  Dog.cpp  Dog.h  FireballSpawner.cpp  FireballSpawner.h  InvisibleWall.cpp  InvisibleWall.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Skeleton.cpp  Skeleton.h  Spawner.cpp  Spawner.h  SpikeGate.cpp  SpikeGate.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawBossAnimatedComponent.cpp  DrawBossAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: UIButton.cpp  UIDialogBox.cpp  UIDialogBox.h  UIElement.h  UIFont.cpp  UIFont.h  UIGameOver.cpp  UIGameOver.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h  UIWinScreen.cpp  UIWinScreen.h
assets/images/mapDrafts/maps/: e01m02.tmx
